Resolved issue #1131 Menu Items Wrapped

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,17 +10,18 @@
     margin: 0px 20px;
   }
   ul {
-    border-bottom: 2px solid #84C44C;   
+    border-bottom: 2px solid #84C44C;
     li {
-      background-color: transparent;      
+      background-color: transparent;
       a {
-        text-transform: uppercase;        
+        text-transform: uppercase;
         font-size: 13px;
         letter-spacing: 1px;
         font-weight: bold;
         border-color: none;
         background-color: transparent;
         border: none;
+        white-space: nowrap;
         &:hover {
           border-color: $navbar-border-color;
         }
@@ -60,7 +61,7 @@
   }
   ul {
       li {
-      background-color: transparent;      
+      background-color: transparent;
       a {
         text-transform: uppercase;
         font-size: 13px;
@@ -160,7 +161,7 @@ ul.right.hide-on-med-and-down{
     }
 
     .dropdown-content-width{
-        min-width: 150px;
+        min-width: 180px;
      }
   }
 }
